--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -148,6 +148,9 @@
             <!-- Recent Admin Activity -->
             <div class="dashboard-card">
                 <h3>📋 Recent Admin Activity</h3>
+                <div style="display:flex; justify-content:flex-end; margin-bottom:0.5rem;">
+                    <button class="btn btn-secondary" onclick="loadAdminActivity()">Refresh</button>
+                </div>
                 <div id="adminActivity">
                     <!-- Admin activity will be populated here -->
                 </div>
