--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -10,15 +10,21 @@
 <body>
     <div class="header">
         <div class="container">
-            <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div style="display: flex; justify-content: space-between; align-items: center; gap: 0.75rem;">
                 <div>
                     <h1 style="margin: 0; font-size: 2.5rem;">Super Admin Dashboard</h1>
                     <p style="margin: 0.5rem 0 0 0;">System Administration & Management</p>
                 </div>
-                <div>
-                    <button id="logoutBtn" class="btn btn-secondary" style="width: auto; padding: 12px 24px;">
-                        Logout
+                <div style="display:flex; align-items:center; gap:0.5rem;">
+                    <button id="openNotificationsBtn" class="btn btn-outline" title="View notifications" style="width:auto; padding: 10px 14px; position:relative; display:flex; align-items:center; gap:8px;">
+                        <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 8a6 6 0 10-12 0c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                            <path d="M13.73 21a2 2 0 01-3.46 0"></path>
+                        </svg>
+                        <span>Notifications</span>
+                        <span id="notifBadge" class="notification-badge" style="position:absolute; top:-6px; right:-6px; display:none;">0</span>
                     </button>
+                    <button id="logoutBtn" class="btn btn-secondary" style="width: auto; padding: 12px 24px;">Logout</button>
                 </div>
             </div>
         </div>
@@ -53,10 +59,34 @@
         </div>
 
         <!-- Dashboard Content -->
-        <div class="dashboard">
+        <div class="dashboard-grid">
+            <!-- System Notifications (moved up for visibility) -->
+            <div class="dashboard-card">
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M18 8a6 6 0 10-12 0c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                        <path d="M13.73 21a2 2 0 01-3.46 0"></path>
+                    </svg>
+                    System Notifications
+                </h3>
+                <div id="systemNotifications">
+                    <!-- System notifications will be populated here -->
+                </div>
+                <button class="btn btn-primary" style="margin-top: 1rem;" onclick="manageNotifications()">
+                    Manage Notifications
+                </button>
+            </div>
             <!-- User Management Card -->
             <div class="dashboard-card">
-                <h3>👥 User Management</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H7a4 4 0 0 0-4 4v2"/>
+                        <circle cx="9" cy="7" r="4"/>
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                    </svg>
+                    User Management
+                </h3>
                 <p>Manage all system users and permissions</p>
                 <div id="userSummary">
                     <!-- User summary will be populated here -->
@@ -71,7 +101,13 @@
 
             <!-- Hostel Management Card -->
             <div class="dashboard-card">
-                <h3>🏢 Hostel Management</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 9l9-7 9 7"/>
+                        <path d="M9 22V12h6v10"/>
+                    </svg>
+                    Hostel Management
+                </h3>
                 <p>Configure hostels, rooms, and facilities</p>
                 <div id="hostelSummary">
                     <!-- Hostel summary will be populated here -->
@@ -86,7 +122,14 @@
 
             <!-- System Analytics -->
             <div class="dashboard-card">
-                <h3>📊 System Analytics</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <line x1="18" y1="20" x2="18" y2="10"/>
+                        <line x1="12" y1="20" x2="12" y2="4"/>
+                        <line x1="6" y1="20" x2="6" y2="14"/>
+                    </svg>
+                    System Analytics
+                </h3>
                 <p>View comprehensive system statistics and trends</p>
                 <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 1rem;">
                     <button class="btn btn-primary" onclick="viewAnalytics()">View Analytics</button>
@@ -97,7 +140,13 @@
 
             <!-- Financial Management -->
             <div class="dashboard-card">
-                <h3>💰 Financial Management</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <line x1="12" y1="1" x2="12" y2="23"/>
+                        <path d="M17 5H9a3 3 0 0 0 0 6h6a3 3 0 0 1 0 6H6"/>
+                    </svg>
+                    Financial Management
+                </h3>
                 <p>Monitor payments, fees, and financial reports</p>
                 <div id="financialSummary">
                     <!-- Financial summary will be populated here -->
@@ -106,7 +155,12 @@
 
             <!-- Maintenance Overview -->
             <div class="dashboard-card">
-                <h3>🔧 Maintenance Overview</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14.7 6.3a1 1 0 0 1 1.4 0l1.6 1.6a1 1 0 0 1 0 1.4l-8.8 8.8a4 4 0 1 1-5.7-5.7l8.8-8.8a1 1 0 0 1 1.4 0z"/>
+                    </svg>
+                    Maintenance Overview
+                </h3>
                 <p>System-wide maintenance monitoring</p>
                 <div id="maintenanceOverview">
                     <!-- Maintenance overview will be populated here -->
@@ -121,7 +175,12 @@
 
             <!-- Security & Audit -->
             <div class="dashboard-card">
-                <h3>🛡️ Security & Audit</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"/>
+                    </svg>
+                    Security & Audit
+                </h3>
                 <p>Monitor system security and audit trails</p>
                 <div id="securitySummary">
                     <!-- Security summary will be populated here -->
@@ -136,7 +195,12 @@
 
             <!-- System Health -->
             <div class="dashboard-card">
-                <h3>💚 System Health</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78L12 21l8.84-8.61a5.5 5.5 0 0 0 0-7.78z"/>
+                    </svg>
+                    System Health
+                </h3>
                 <div id="systemHealth">
                     <!-- System health will be populated here -->
                 </div>
@@ -147,8 +211,17 @@
 
             <!-- Recent Admin Activity -->
             <div class="dashboard-card">
-                <h3>📋 Recent Admin Activity</h3>
-                <div style="display:flex; justify-content:flex-end; margin-bottom:0.5rem;">
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                        <polyline points="14 2 14 8 20 8"/>
+                        <line x1="16" y1="13" x2="8" y2="13"/>
+                        <line x1="16" y1="17" x2="8" y2="17"/>
+                    </svg>
+                    Recent Admin Activity
+                </h3>
+                <div style="display:flex; gap:0.5rem; justify-content:flex-end; margin-bottom:0.5rem;">
+                    <button class="btn btn-outline" id="clearActivityBtn">Clear</button>
                     <button class="btn btn-secondary" onclick="loadAdminActivity()">Refresh</button>
                 </div>
                 <div id="adminActivity">
@@ -156,15 +229,23 @@
                 </div>
             </div>
 
-            <!-- System Notifications -->
-            <div class="dashboard-card">
-                <h3>🔔 System Notifications</h3>
-                <div id="systemNotifications">
-                    <!-- System notifications will be populated here -->
-                </div>
-                <button class="btn btn-primary" style="margin-top: 1rem;" onclick="manageNotifications()">
-                    Manage Notifications
-                </button>
+            
+        </div>
+    </div>
+
+    <!-- Notifications Modal -->
+    <div id="notificationsModal" class="modal" aria-hidden="true">
+        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="notificationsModalTitle">
+            <div class="modal-header">
+                <h3 id="notificationsModalTitle">System Notifications</h3>
+                <span class="close" role="button" tabindex="0" onclick="closeNotificationsModal()">&times;</span>
+            </div>
+            <div class="modal-body" id="notificationsModalBody">
+                <!-- Filled by JS -->
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-outline" onclick="manageNotifications()">Manage Notifications</button>
+                <button class="btn btn-secondary" onclick="closeNotificationsModal()">Close</button>
             </div>
         </div>
     </div>
