--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -36,7 +36,14 @@
         <div class="dashboard-grid">
             <!-- Personal Information Card -->
             <div class="dashboard-card">
-                <h3>👤 Personal Information</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M20 21v-2a4 4 0 0 0-3-3.87"/>
+                        <path d="M4 21v-2a4 4 0 0 1 4-4h8"/>
+                        <circle cx="12" cy="7" r="4"/>
+                    </svg>
+                    Personal Information
+                </h3>
                 <div class="info-grid">
                     <div class="info-item">
                         <span class="info-label">Name:</span>
@@ -67,7 +74,13 @@
 
             <!-- Room Allotment Card (shown when no room assigned) -->
             <div class="dashboard-card" id="allotmentCard" style="display: none;">
-                <h3>🏨 Room Allotment</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 9l9-7 9 7"/>
+                        <path d="M9 22V12h6v10"/>
+                    </svg>
+                    Room Allotment
+                </h3>
                 <p>Apply for hostel room allocation. Complete your registration to secure accommodation.</p>
                 <div class="button-group">
                     <button class="btn btn-primary" onclick="openAllotmentModal()">Apply for Allotment</button>
@@ -76,7 +89,13 @@
 
             <!-- Room Information Card (shown when room assigned) -->
             <div class="dashboard-card" id="roomInfoCard">
-                <h3>🏠 Room Information</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 9l9-7 9 7"/>
+                        <path d="M9 22V12h6v10"/>
+                    </svg>
+                    Room Information
+                </h3>
                 <div id="roomInfo">
                     <!-- Room information will be populated here -->
                 </div>
@@ -87,7 +106,12 @@
 
             <!-- Maintenance Requests Card -->
             <div class="dashboard-card">
-                <h3>🔧 Maintenance Requests</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14.7 6.3a1 1 0 0 1 1.4 0l1.6 1.6a1 1 0 0 1 0 1.4l-8.8 8.8a4 4 0 1 1-5.7-5.7l8.8-8.8a1 1 0 0 1 1.4 0z"/>
+                    </svg>
+                    Maintenance Requests
+                </h3>
                 <div id="maintenanceRequests">
                     <!-- Maintenance requests will be populated here -->
                 </div>
@@ -95,7 +119,13 @@
 
             <!-- Quick Actions Card -->
             <div class="dashboard-card">
-                <h3>⚡ Quick Actions</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <polyline points="13 2 13 9 20 9"/>
+                        <polyline points="11 22 11 15 4 15"/>
+                    </svg>
+                    Quick Actions
+                </h3>
                 <div class="button-group">
                     <button class="btn btn-primary" onclick="reportIssue()">Report Issue</button>
                     <button class="btn btn-primary" onclick="viewHostelRules()">Hostel Rules</button>
@@ -106,7 +136,15 @@
 
             <!-- Recent Activity Card -->
             <div class="dashboard-card">
-                <h3>📋 Recent Activity</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                        <polyline points="14 2 14 8 20 8"/>
+                        <line x1="16" y1="13" x2="8" y2="13"/>
+                        <line x1="16" y1="17" x2="8" y2="17"/>
+                    </svg>
+                    Recent Activity
+                </h3>
                 <div id="recentActivity">
                     <!-- Recent activity will be populated here -->
                 </div>
@@ -325,7 +363,13 @@
     <div id="roomDetailsModal" class="modal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>🏠 Room Details</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 9l9-7 9 7"/>
+                        <path d="M9 22V12h6v10"/>
+                    </svg>
+                    Room Details
+                </h3>
                 <span class="close" onclick="closeRoomDetailsModal()">&times;</span>
             </div>
             <div class="modal-body">
@@ -343,7 +387,13 @@
     <div id="changePasswordModal" class="modal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>🔐 Change Password</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+                        <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+                    </svg>
+                    Change Password
+                </h3>
                 <span class="close" onclick="closePasswordModal()">&times;</span>
             </div>
             <div class="modal-body">
