--- a/frontend/warden-dashboard.html
+++ b/frontend/warden-dashboard.html
@@ -56,7 +56,13 @@
         <div class="dashboard">
             <!-- Room Management Card -->
             <div class="dashboard-card">
-                <h3>🏠 Room Management</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 9l9-7 9 7"/>
+                        <path d="M9 22V12h6v10"/>
+                    </svg>
+                    Room Management
+                </h3>
                 <p>Manage room allocations and availability</p>
                 <div id="roomSummary">
                     <!-- Room summary will be populated here -->
@@ -71,7 +77,12 @@
 
             <!-- Maintenance Requests Management -->
             <div class="dashboard-card">
-                <h3>🔧 Maintenance Requests</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14.7 6.3a1 1 0 0 1 1.4 0l1.6 1.6a1 1 0 0 1 0 1.4l-8.8 8.8a4 4 0 1 1-5.7-5.7l8.8-8.8a1 1 0 0 1 1.4 0z"/>
+                    </svg>
+                    Maintenance Requests
+                </h3>
                 <p>Review and approve maintenance requests</p>
                 <div id="maintenanceQueue">
                     <!-- Pending requests will be populated here -->
@@ -86,7 +97,15 @@
 
             <!-- Student Management Card -->
             <div class="dashboard-card">
-                <h3>👥 Student Management</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H7a4 4 0 0 0-4 4v2"/>
+                        <circle cx="9" cy="7" r="4"/>
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                    </svg>
+                    Student Management
+                </h3>
                 <p>Oversee student information and activities</p>
                 <div id="studentSummary">
                     <!-- Student summary will be populated here -->
@@ -101,7 +120,12 @@
 
             <!-- Notifications & Announcements -->
             <div class="dashboard-card">
-                <h3>📢 Announcements</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M3 11l18-5v7l-18-5v7a3 3 0 0 0 3 3h3"/>
+                    </svg>
+                    Announcements
+                </h3>
                 <p>Send notifications to students</p>
                 <div id="recentAnnouncements">
                     <!-- Recent announcements will be populated here -->
@@ -116,7 +140,14 @@
 
             <!-- Reports & Analytics -->
             <div class="dashboard-card">
-                <h3>📊 Reports & Analytics</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <line x1="18" y1="20" x2="18" y2="10"/>
+                        <line x1="12" y1="20" x2="12" y2="4"/>
+                        <line x1="6" y1="20" x2="6" y2="14"/>
+                    </svg>
+                    Reports & Analytics
+                </h3>
                 <p>View hostel statistics and reports</p>
                 <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 1rem;">
                     <button class="btn btn-primary" onclick="occupancyReport()">Occupancy Report</button>
@@ -128,7 +159,13 @@
 
             <!-- Quick Actions -->
             <div class="dashboard-card">
-                <h3>⚡ Quick Actions</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <polyline points="13 2 13 9 20 9"/>
+                        <polyline points="11 22 11 15 4 15"/>
+                    </svg>
+                    Quick Actions
+                </h3>
                 <div style="display: flex; flex-direction: column; gap: 0.5rem;">
                     <button class="btn btn-primary" onclick="emergencyAlert()">Emergency Alert</button>
                     <button class="btn btn-secondary" onclick="bulkNotification()">Bulk Notification</button>
@@ -139,7 +176,15 @@
 
             <!-- Recent Activity Card -->
             <div class="dashboard-card">
-                <h3>📋 Recent Activity</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                        <polyline points="14 2 14 8 20 8"/>
+                        <line x1="16" y1="13" x2="8" y2="13"/>
+                        <line x1="16" y1="17" x2="8" y2="17"/>
+                    </svg>
+                    Recent Activity
+                </h3>
                 <div id="recentActivity">
                     <!-- Recent activity will be populated here -->
                 </div>
@@ -147,7 +192,12 @@
 
             <!-- Pending Approvals -->
             <div class="dashboard-card">
-                <h3>✅ Pending Approvals</h3>
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <polyline points="20 6 9 17 4 12"/>
+                    </svg>
+                    Pending Approvals
+                </h3>
                 <div id="pendingApprovals">
                     <!-- Pending approvals will be populated here -->
                 </div>
