warden functionalities completed

--- a/frontend/warden-dashboard.html
+++ b/frontend/warden-dashboard.html
@@ -70,7 +70,7 @@
                 <button class="btn btn-primary" style="margin-top: 1rem;" onclick="manageRooms()">
                     Manage Rooms
                 </button>
-                <button class="btn btn-secondary" style="margin-top: 0.5rem;" onclick="allocateRoom()">
+                <button class="btn btn-primary" style="margin-top: 0.5rem;" onclick="allocateRoom()">
                     Allocate Room
                 </button>
             </div>
@@ -90,7 +90,7 @@
                 <button class="btn btn-primary" style="margin-top: 1rem;" onclick="reviewRequests()">
                     Review Requests
                 </button>
-                <button class="btn btn-secondary" style="margin-top: 0.5rem;" onclick="viewMaintenanceHistory()">
+                <button class="btn btn-primary" style="margin-top: 0.5rem;" onclick="viewMaintenanceHistory()">
                     View History
                 </button>
             </div>
@@ -113,7 +113,7 @@
                 <button class="btn btn-primary" style="margin-top: 1rem;" onclick="viewAllStudents()">
                     View All Students
                 </button>
-                <button class="btn btn-secondary" style="margin-top: 0.5rem;" onclick="addStudent()">
+                <button class="btn btn-primary" style="margin-top: 0.5rem;" onclick="addStudent()">
                     Add Student
                 </button>
             </div>
@@ -133,7 +133,7 @@
                 <button class="btn btn-primary" style="margin-top: 1rem;" onclick="createAnnouncement()">
                     New Announcement
                 </button>
-                <button class="btn btn-secondary" style="margin-top: 0.5rem;" onclick="viewAllAnnouncements()">
+                <button class="btn btn-primary" style="margin-top: 0.5rem;" onclick="viewAllAnnouncements()">
                     View All
                 </button>
             </div>
@@ -151,9 +151,9 @@
                 <p>View hostel statistics and reports</p>
                 <div style="display: flex; flex-direction: column; gap: 0.5rem; margin-top: 1rem;">
                     <button class="btn btn-primary" onclick="occupancyReport()">Occupancy Report</button>
-                    <button class="btn btn-secondary" onclick="maintenanceReport()">Maintenance Report</button>
-                    <button class="btn btn-secondary" onclick="studentReport()">Student Report</button>
-                    <button class="btn btn-secondary" onclick="financialReport()">Financial Report</button>
+                    <button class="btn btn-primary" onclick="maintenanceReport()">Maintenance Report</button>
+                    <button class="btn btn-primary" onclick="studentReport()">Student Report</button>
+                    <button class="btn btn-primary" onclick="financialReport()">Financial Report</button>
                 </div>
             </div>
 
@@ -168,9 +168,9 @@
                 </h3>
                 <div style="display: flex; flex-direction: column; gap: 0.5rem;">
                     <button class="btn btn-primary" onclick="emergencyAlert()">Emergency Alert</button>
-                    <button class="btn btn-secondary" onclick="bulkNotification()">Bulk Notification</button>
-                    <button class="btn btn-secondary" onclick="roomInspection()">Schedule Inspection</button>
-                    <button class="btn btn-secondary" onclick="updateRules()">Update Rules</button>
+                    <button class="btn btn-primary" onclick="bulkNotification()">Bulk Notification</button>
+                    <button class="btn btn-primary" onclick="roomInspection()">Schedule Inspection</button>
+                    <button class="btn btn-primary" onclick="updateRules()">Update Rules</button>
                 </div>
             </div>
 
