--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -245,7 +245,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-outline" onclick="manageNotifications()">Manage Notifications</button>
-                <button class="btn btn-secondary" onclick="closeNotificationsModal()">Close</button>
+                <button class="btn btn-primary" onclick="closeNotificationsModal()">Close</button>
             </div>
         </div>
     </div>
