--- a/frontend/student-dashboard.html
+++ b/frontend/student-dashboard.html
@@ -24,8 +24,20 @@
                         </svg>
                         <span class="notification-badge" id="notificationBadge" style="display: none;">0</span>
                     </button>
-                    <button class="btn btn-primary" onclick="editProfile()">Edit Profile</button>
-                    <button class="btn btn-secondary" onclick="openChangePasswordModal()">Change Password</button>
+                    <button class="btn btn-outline" onclick="editProfile()">
+                        <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: -3px; margin-right:6px;">
+                            <path d="M12 20h9"/>
+                            <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4 12.5-12.5z"/>
+                        </svg>
+                        Edit Profile
+                    </button>
+                    <button class="btn btn-outline" onclick="openChangePasswordModal()">
+                        <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: -3px; margin-right:6px;">
+                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+                            <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+                        </svg>
+                        Change Password
+                    </button>
                     <button class="btn btn-outline" onclick="logout()">Logout</button>
                 </div>
             </div>
@@ -147,6 +159,20 @@
                 </h3>
                 <div id="recentActivity">
                     <!-- Recent activity will be populated here -->
+                </div>
+            </div>
+
+            <!-- Fees and Payments Card -->
+            <div class="dashboard-card">
+                <h3>
+                    <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink:0;">
+                        <rect x="2" y="4" width="20" height="16" rx="2"/>
+                        <line x1="2" y1="10" x2="22" y2="10"/>
+                    </svg>
+                    My Fees
+                </h3>
+                <div id="feesSection">
+                    <!-- Fees will be populated here -->
                 </div>
             </div>
         </div>
